# Catalog-Compile

./: (SHA) Disaggregation Plots (M-R-Eps) R0 2022.12.07.xlsx  (SHA) Disaggregation Plots (M-R-Eps) R0 2022.12.14.xlsx  .gitignore  LICENSE  README.md  USGS_save_catalogs.py  formatCSV.bas  mag_depth.py  pyproject.toml
git-notebooks/: 01 ISC Download Example.ipynb  02 Basic Catalogue Usage.ipynb  03 Catalogue Querying Example.ipynb  03B Catalogue Querying GCMT Example.ipynb  04 Homogenisation.ipynb  05-Homogenisation-v2.ipynb  2021-2023-isc-rb-homogeneous_catalogue_2023.07.27.csv
git-notebooks/inputs/: Pacheco-Sykes.xlsx  gute-pas-cat.csv  isc-gem-cat.csv  phivolcs-combined-hmtk-minM4pt5.csv  phivolcs-combined-hmtk-minM4pt5.xlsx  ps1992-ph-cat.csv  ps1992-ph-cat.xlsx  test-isf-a.isf  test-isf-b.isf  usgs2000-2023.csv
git-notebooks/mueller2018/: 06-[1900-1929] Homogenisation-v3.ipynb  06-[1930-1959] Homogenisation-v3.ipynb  06-[1960-1989] Homogenisation-v3.ipynb
git-notebooks/outputs/: Overall_Seismicity_Dec_2023.08.16.csv  PAS-catalogue_db4.hdf5  iscgem-catalogue_db.hdf5  test-isf-ab.isf
git-notebooks/regression/: 03C Catalogue Querying Example.ipynb  03E Catalogue Regression Phivolcs.ipynb
git-notebooks/temp/: log.txt  settings.toml
notebooks/: 01 ISC Download Example.ipynb  02 Basic Catalogue Usage.ipynb  03 Catalogue Querying Example.ipynb  04 Homogenisation.ipynb  merge-iscgem-isf.ipynb
notebooks/outputs/: 1900-2021-PH_ISF_Catalogue_magnitudes_2023.07.27.08.17.47.csv  (+5 more)
scripts/: 01_build_eq_catalog.py  02_build_area_source_models.py  plot_disagg_4d.py
(+36 files in other folders)
